# arcane

./: .gitignore  =6.0  README.md  knowledge.md  pyproject.toml  requirements.txt  summary.md
accident_reports/: __init__.py  detector.py  package.py
config/: vehicle.yaml
dataset/: __init__.py  build_dataset.py  collector.py  feature_extraction.py  manual_recorder.py  schema.py
docs/: dataset_schema.md  deployment.md
edge_protocol/: __init__.py  messages.py
event_logger/: __init__.py  evidence.py
explainability/: __init__.py  report_generator.py
finally/: README.md  __init__.py  config.py  controller.py  gps_test.py  hardware.py  main.py  models.py  motor_test.py  motors.py  recording.py  ui_server.py  vision.py
host_server/: __init__.py  autonomous_dashboard.py  dashboard.py  processing.py  server.py
inference/: __init__.py  manual_model_runtime.py  run_vehicle.py  runtime.py
navigation_ai/: __init__.py  actions.py  expert_controller.py  gap_detector.py
rpi_edge/: __init__.py  client.py
scripts/: arcane-xav.service  diagnose_ir_polarity.py  setup_pi.sh  start_host.sh  start_rpi_edge.sh  test_ir_sensors.py  test_servo.py  test_ultrasonic_lgpio.py
sensor_layer/: __init__.py  actuators.py  config.py  gpio_factory.py  gps.py  imu.py  sensors.py  system_packages.py  types.py  ultrasonic.py
tests/: test_dataset_and_reports.py  test_expert_controller.py  test_finally_controller.py  test_host_processor.py  test_inference_runtime.py  test_ir_polarity.py  test_local_autonomy.py  test_manual_control.py  test_servo_obstacle_logic.py
(+7 files in other folders)
